[package]
name = "xai"
version = "0.1.0"
edition = "2021"

[lib]
name = "remote_cmd"

[[bin]]
name = "server"
path = "src/bin/server.rs" 

[dependencies]
clap = { version = "3.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
